--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "training-vue",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x.x"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
